@@ -1007,7 +1007,7 @@ run (struct screen *screen)
 
 
   /* Execute the script, line for line.  */
-  while (currline < screen->num_lines - 1)
+  while (currline < screen->num_lines)
     {
       editor_getline (&nextline);
       parsed_script = grub_script_parse (nextline, editor_getline);
@@ -1018,14 +1018,14 @@ run (struct screen *screen)
 	  
 	  /* The parsed script was executed, throw it away.  */
 	  grub_script_free (parsed_script);
-
-	  if (grub_errno == GRUB_ERR_NONE && grub_loader_is_loaded ())
-	    /* Implicit execution of boot, only if something is loaded.  */
-	    grub_command_execute ("boot", 0);
 	}
       else
 	break;
     }
+
+  if (grub_errno == GRUB_ERR_NONE && grub_loader_is_loaded ())
+    /* Implicit execution of boot, only if something is loaded.  */
+    grub_command_execute ("boot", 0);
 
   if (grub_errno != GRUB_ERR_NONE)
     {
