@@ -1,3 +1,8 @@
+2006-12-11  Marco Gerards  <marco@gnu.org>
+
+	* normal/menu_entry.c (run): Fix off by one bug so the last line
+	is executed.  Move the loader check to outside the loop.
+
 2006-12-08  Hollis Blanchard  <hollis@penguinppc.org>
 
 	* kern/powerpc/ieee1275/cmain.c (cmain): Mark r3 and r4 as `UNUSED'.
